[package]
name = "libbrainview"
version = "0.1.0"
authors = ["Tim Schäfer <ts+code@rcmd.org>"]
edition = "2018"
repository = "https://github.com/dfsp-spirit/brainview-rs"
homepage = "https://github.com/dfsp-spirit/brainview-rs"
keywords = ["neuroimaging", "brain", "MRI", "viewer", "neuroscience", "freesurfer", "visualization", "mesh"]
categories = ["science", "visualization"]
description = "A simple brain mesh visualization library based on three-d and neuformats. The focus is on the visualization of surface-based brain morphometry data and FreeSurfer file formats."
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]

[dependencies]
three-d = "0.6.0"
neuroformats = "0.2.0"
colorous = "1.0.3"
quick-error = "2.0"

